tests-integration/fixtures/checking/230_record_expression_missing_and_additional/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: { a :: Int, b :: Int }

Types

Diagnostics
error[PropertyIsMissing]: Missing required properties: b
  --> 4:8..4:22
  |
4 | test = { a: 1, c: 3 }
  |        ^~~~~~~~~~~~~~
error[AdditionalProperty]: Additional properties not allowed: c
  --> 4:8..4:22
  |
4 | test = { a: 1, c: 3 }
  |        ^~~~~~~~~~~~~~
